# JW_HighSpeed_DAQ

./: CMakeLists.txt  CMakeLists.txt.user.7eb3032  Client.cpp  Client.h  DataAnalysis.cpp  DataAnalysis.h  Draw.cpp  Draw.h  LinkDef.h  README.md  TCanvasWidget.cpp  TCanvasWidget.h  Welford.h  clusters.cpp  data_struct_cint.h  dialogbaseline.cpp  dialogbaseline.h  dialogbaseline.ui  dialoghvcalculator.cpp  dialoghvcalculator.h  dialoghvcalculator.ui  dialogmisc.cpp  dialogmisc.h  dialogmisc.ui  dialogtrigger.cpp  dialogtrigger.h  dialogtrigger.ui  formdrawchannelwaves.cpp  formdrawchannelwaves.h  formdrawchannelwaves.ui  formdraweventwaves.cpp  formdraweventwaves.h  formdraweventwaves.ui  formdrawseveralwaves.cpp  formdrawseveralwaves.h  formdrawseveralwaves.ui  formdrawtrack.cpp  formdrawtrack.h  formdrawtrack.ui  main.cpp  (+12 more)
